# primer

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  Dockerfile.frontend  Dockerfile.server  LICENSE  Makefile  PUBLISHING.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  publish.yml  website.yml
alembic/: env.py
alembic/versions/: 0f3b0a1e2c91_add_session_recovery_paths.py  1c66d7ff642e_add_session_customization_snapshots.py  1ecc29084a60_add_session_messages_table.py  2d97113e257c_add_alert_configs_and_audit_logs_tables.py  3a8722751e66_add_session_execution_evidence.py  44c9b01ccad2_add_session_workflow_profiles.py  4c9f2f8c1d6a_add_session_facet_confidence_score.py  5ab15e4f648f_add_narrative_cache_table.py  5d4c1c9b2a0f_add_daily_analytics_rollups.py  5fc2e3115f6c_add_interventions.py  671188b1f992_add_customization_source_classification.py  6afbfebba178_add_device_setup_codes.py  6b7e5d1b8a91_add_session_change_shapes.py  7103e4887012_add_source_to_review_findings_unique_.py  7752efb0e9d2_add_quality_metrics_tables.py  7dda515efd1d_add_data_summary_to_narrative_cache.py  8f1d9f8c1b8a_add_session_source_metadata.py  96ad815a1a77_add_intervention_experiment_fields.py  9c4e71d3b2a1_add_explorer_saved_items.py  a1b2c3d4e5f6_add_agent_type_rename_claude_fields.py  a3c77ce12244_add_review_findings_table.py  b3893fbf0831_add_alert_model_and_engineer_is_active.py  c2f8b3a91d4e_add_engineer_api_key_lookup_hash.py  c8f0a1b2d3e4_add_finops_budgets_and_billing_mode.py  d4f9d944e709_add_repository_context_fields.py  d887cdeb3ce8_add_device_tokens.py  ee51671989df_initial_schema.py  f47072d5b309_add_ai_readiness_to_git_repositories.py  f87d66ab973b_add_background_jobs.py
brand/: BRAND.md  tokens.css
deploy/helm/primer/: Chart.yaml  values.yaml
deploy/helm/primer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-frontend.yaml  deployment-server.yaml  hpa-frontend.yaml  hpa-server.yaml  ingress.yaml  job-migrate.yaml  pdb-frontend.yaml  pdb-server.yaml  secret.yaml  service-frontend.yaml  service-server.yaml
deploy/nginx/: default.conf.template
docs/: api.md  architecture.md  configuration.md  deployment.md  getting-started.md  github-integration.md  index.md  product-flow.md  user-journeys.md
docs/plans/: 2026-03-07-measurement-integrity-foundation.md  2026-03-08-cursor-session-capture-design.md  2026-03-08-cursor-session-capture-implementation.md  2026-04-06-ui-consolidation-plan.md  installation-simplification.md  marketing-website.md  multi-agent-data-model.md  multi-agent-extractors.md
docs/stylesheets/: extra.css
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/__tests__/: pdf-export.test.ts
frontend/src/components/admin/: admin-alerts-tab.tsx  admin-audit-tab.tsx  (+5 more)
frontend/src/hooks/: use-api-mutations.ts  use-api-queries.ts  use-engineer-chooser.ts  use-explorer-stream.ts  use-keyboard-navigation.ts
frontend/src/lib/: api.ts  auth-context.tsx  chart-colors.ts  constants.ts  csv-export.ts  datetime.ts  pdf-export.ts  recovery.ts  role-utils.ts  theme-context.tsx  utils.ts
frontend/src/pages/: admin.tsx  auth-callback.tsx  bottlenecks.tsx  compare.tsx  dashboard.tsx  engineer-profile.tsx  engineers.tsx  explorer.tsx  finops.tsx  friction.tsx  growth.tsx  insights.tsx  interventions.tsx  login.tsx  maturity.tsx  narrative.tsx  not-found.tsx  overview.tsx  profile.tsx  project-workspace.tsx  projects.tsx  quality.tsx  session-detail.tsx  session-insights.tsx  sessions.tsx  team-detail.tsx  teams.tsx  tool-adoption.tsx
frontend/src/types/: api.ts  auth.ts
scripts/: backfill_demo_links.py  backfill_repo_readiness.py  demo-entrypoint.sh  generate_og_image.py  install_hook.py  prewarm_narratives.py  provision_user.py  seed_data.py  seed_demo.py  seed_phase.py  verify_github.py
src/primer/cli/: config.py  console.py  main.py  paths.py  server_manager.py
src/primer/common/: auth_headers.py  config.py  customizations.py  database.py  facet_taxonomy.py  models.py  pricing.py  schemas.py  source_capabilities.py  tool_classification.py  utils.py
src/primer/hook/: codex_extractor.py  cursor_extractor.py  extractor.py  extractor_registry.py  gemini_extractor.py  installer.py  session_end.py
src/primer/mcp/: nudges.py  reader.py  server.py  sync.py  tools.py
src/primer/server/: app.py  demo_middleware.py  deps.py  middleware.py
tests/: conftest.py  test_admin.py  test_agent_team_service.py  test_ai_readiness.py  test_alert_configs.py  test_alerting.py  test_analytics.py  test_analytics_cache_service.py  test_analytics_rollup_service.py  test_audit.py  test_auth.py  test_background_job_service.py  test_benchmarks.py  test_bottlenecks.py  test_change_shape_service.py  test_claude_pr_comparison.py  test_cli.py  test_cli_config.py  test_coaching.py  test_codex_extractor.py  test_compare.py  test_cursor_extractor.py  test_cursor_import.py  test_customizations.py  test_delegation_graph_service.py  test_deps.py  test_effectiveness_service.py  test_engineer_profile.py  test_execution_evidence_service.py  test_explorer.py  test_extractor_registry.py  test_facet_extraction.py  test_facet_taxonomy.py  test_finops.py  test_gemini_extractor.py  test_growth.py  test_hook_extractor.py  test_hook_installer.py  test_hook_session_end.py  test_ingest.py  (+35 more)
website/: astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  _headers  install.sh  robots.txt
website/src/: content.config.ts
website/src/components/: Footer.astro  Nav.astro  SEO.astro  TerminalAnimation.tsx  ThemeToggle.tsx
website/src/layouts/: BaseLayout.astro  BlogPost.astro  DocsPage.astro
website/src/pages/: compare.astro  index.astro  pricing.astro
website/src/styles/: global.css
(+356 files in other folders)
