[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primer"
version = "0.1.0"
description = "Aggregate Claude Code usage insights across an engineering organization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "mcp>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
primer = "primer.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "bandit[toml]>=1.8.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "S", "T20", "SIM", "TCH", "RUF"]
ignore = ["S101", "S104", "S106", "S607", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"scripts/**/*.py" = ["T20", "S311"]
"src/primer/cli/**/*.py" = ["T20", "S603"]
"src/primer/hook/**/*.py" = ["S603"]
"alembic/**/*.py" = ["E501", "W291", "UP", "I001", "RUF"]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101", "B104", "B105", "B404", "B603", "B607"]

[tool.hatch.build.targets.wheel.force-include]
"alembic" = "primer/_alembic"
"alembic.ini" = "primer/_alembic.ini"
