[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "useprimer"
version = "0.2.0"
description = "Agent harness intelligence — measure what makes your AI coding tools effective"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Charles C. Figueiredo", email = "ccf@ccf.io" },
]
maintainers = [
    { name = "Charles C. Figueiredo", email = "ccf@ccf.io" },
]
keywords = [
    "agent-harness",
    "claude-code",
    "cursor",
    "codex",
    "gemini",
    "ai-engineering",
    "developer-tools",
    "analytics",
    "observability",
    "harness-intelligence",
    "workflow-intelligence",
    "finops",
    "devex",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.0.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "mcp>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
    "click>=8.1.0",
    "redis>=5.2.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[project.urls]
Homepage = "https://useprimer.dev"
Documentation = "https://useprimer.dev/docs/"
Repository = "https://github.com/ccf/primer"
Issues = "https://github.com/ccf/primer/issues"
Changelog = "https://github.com/ccf/primer/releases"
"Live Demo" = "https://demo.useprimer.dev"

[project.scripts]
primer = "primer.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "bandit[toml]>=1.8.0",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "S", "T20", "SIM", "TCH", "RUF"]
ignore = ["S101", "S104", "S106", "S607", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"scripts/**/*.py" = ["T20", "S311", "S603"]
"src/primer/cli/**/*.py" = ["T20", "S603"]
"src/primer/hook/**/*.py" = ["S603"]
"alembic/**/*.py" = ["E501", "W291", "UP", "I001", "RUF"]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101", "B104", "B105", "B404", "B603", "B607"]

[tool.hatch.build.targets.wheel]
# PyPI project name is "useprimer" (matches useprimer.dev) but the importable
# Python module is still `primer` — same pattern as PyYAML → `yaml`. Tell
# hatch to include src/primer/ in the wheel.
packages = ["src/primer"]

[tool.hatch.build.targets.wheel.force-include]
"alembic" = "primer/_alembic"
"alembic.ini" = "primer/_alembic.ini"

[tool.hatch.build.targets.sdist]
include = [
    "src/primer",
    "alembic",
    "alembic.ini",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
